Side panel spacing fix

--- a/src/Assets/src/sass/_sidebar.scss
+++ b/src/Assets/src/sass/_sidebar.scss
@@ -15,7 +15,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 60px;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 135px);
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
